--- a/python/2.md
+++ b/python/2.md
@@ -1,4 +1,4 @@
-Python的官方文档，https://docs.python.org/3/。
+[Python的官方文档](https://docs.python.org/3/)。
 
 进入这里后，作为还是什么都不会的人，先看Tutorial的内容。
 看样子下面那些就是关键点了。Glossary是可以点的，里面是一些与Python有关的符号的介绍。这里先跳过。
