--- a/python/6.md
+++ b/python/6.md
@@ -1,20 +1,57 @@
-发现在这里可以下载到在线文档的离线版：[下载链接](https://docs.python.org/3/download.html)
+## 大概说一说
 
-## 2.2 解释器和它的环境
+### 将Python当成一个计算器来用
 
-### 2.2.1 源代码的编码
+#### 数字
 
-默认情况下，解释器把文件看做UTF-8编码，虽然其它编码也可以识别。为了明确编码，文件的第一行需要这样写：
+Python的解释器扮演了一个简单的计算器。比如这样：
 
-    # -*- coding: encoding -*-
+    >>> 2 + 2
+    4
+    >>> 50 - 5 * 6
+    20
+    >>> (50 - 5 * 6) / 4
+    5.0
 
-比如
+整数4,20属于```int```类型，带有小数点的数5.0属于```float```类型。除法运算“/”的结果，总是```float```类型，希望向下取整得到一个```int```类型需要使用"//"符号，想要获得余数，使用"%"符号。
 
-    # -*- coding: cp1252 -*-
+    >>> 17 / 3 # 除法运算结果是浮点数
+    5.666666666666667
+    >>> 17 // 3 # 向下取整去除了小数后面的部分
+    5
+    >>> 17 % 3 # 取余运算
+    2
+    >>> 5 * 3 + 2 # result * divisor + remainder
+    17
 
-除非这种情况就要写在第二行
+当一个运算过程包含浮点数的时候，整数会被自动转换为浮点数，比如```3 * 1.2 + 1```。
 
-    #!/usr/bin/env python3
-    # -*- coding: cp1252 -*-
+运算符 “ ** ” 用来计算数字的几次幂，是幂运算。
 
-> 在 Unix 上, python 3.x 解释器默认情况下没有安装名为 python 的可执行文件, 因此它不会与同时安装的 python 2.x 可执行文件冲突。
+比如计算2的4次幂，输入```2**4```。左边的数字是底数，右边的数字是指数。
+
+符号“=”是用来给变量赋值的，ptyhon的变量直接写出变量名给它赋值就行了，这样：
+
+    >>> width = 100
+    >>> height = 200
+    >>> width * height
+    20000
+
+交互模式赋值并不会直接返回变量的值，只有计算产生了计算结果，才会显示出来。尝试读一个没有赋值的变量，将会产生错误。
+
+    >>> r
+    Traceback (most recent call last):
+      File "<pyshell#7>", line 1, in <module>
+        r
+    NameError: name 'r' is not defined
+    >>>
+
+最后输出的表达式的返回值，Python将会保存在变量```_```中。不要自己给变量```_```赋值，赋值会创建一个独立的本地变量```_```，会使得下次无法读取真正的```_```的值。
+
+除了整数和浮点数，python还有别的类型，如Decimal和Fraction。甚至可以用来表示复数，比如j或J符号是用来表示虚数部分的，```3+2j```就是一个复数。
+
+    >>> u = 3 + 2j
+    >>> u
+    (3+2j)
+    >>> 
+
