--- a/Linux/文件的权限.md
+++ b/Linux/文件的权限.md
@@ -50,6 +50,8 @@ Linux下的权限有三种，分别是读（r）、写（w）、可执行（x）
 
     rwx | r-x | r-x
 
+> Access: (0755/-rwxr-xr-x) 最左边的一个```-```表示这个是文件，目录的话它是```d```。
+
 从左往右看，第一组代表文件的拥有者的权限。一般地，这个文件谁创建的谁就是拥有者，但是拥有者是可以修改的。
 
 > Uid: (    0/    root)    Gid: (    0/    root)
