增加Memcached和Elasticsearch的文档

--- a/Laravel/1 安装需求环境.md
+++ b/Laravel/1 安装需求环境.md
@@ -1,8 +1,10 @@
 ## 安装
 
-Laravel的安装对系统环境有些要求，当然这些要求在名为Laravel Homestead的虚拟机内都可以支持。因此官方推荐使用Homestead作为开发环境。
+Laravel的安装对系统环境有些要求，在官方Homestead虚拟机内是都能满足的。因此官方推荐使用Homestead作为开发环境。
 
-可以不使用Homestead，但是PHP就需要满足这些条件了：PHP版本大于等于7.1.3并且开启下列扩展：OpenSSL、PDO、Mbstring、Tokenizer、XML、Ctype、JSON。
+可以不使用Homestead，但是需要满足这些条件：
+
+> PHP版本大于等于7.1.3并且开启下列扩展：OpenSSL、PDO（连数据库用的是PDO的扩展）、Mbstring、Tokenizer、XML、Ctype、JSON。
 
 安装Laravel需要电脑上具有Composer。
 
@@ -19,3 +21,5 @@ Laravel的安装对系统环境有些要求，当然这些要求在名为Laravel
 ## 配置
 
 Web目录需要配置到public目录。
+
+> 实测发现，由于文件缓存需要权限，所以开发机器上我直接chmod -R 777 laravel-project-floder就算了。
